--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xkU96Ebrqqga/o0fMaKZjuKcJ1lTj3pEizfxDZCUawBFtsDzoHxigASXCZ+Se1XVrdb5+wF66a6McgnzTgZx06xmcE2uA5BvaVkB3JYAeJhnI3N0e9xOtXWR7tleYr9F">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VLA7wIiGn/F8OOuR3EMnxeW8x8cTQZ9RFBn8Cx3g64KXeWXdLrVqf88Ugsc76CeyplTRimIJAqXxTsEbF3hp1trnvguRNfoW85WEUTPdrY48BcnG3a3YIu20Cz44pdCO">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
