create github pages

--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wDoz9T906wYumGTqTM6NNdVCvrJ2NlDbEIOEaeCHB7AxNi/rKpogQJ6J4RjhhHqq7BXfxE/LDcYgDpwrMuomD65ecpOGG0DnRevTm3SBVBPU7lVd48thvc8OOmz1DMIs">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RxJD/N2y0zbH3lGQi6QgpPokA9jufKctQoIQWLxpJ13fnyn/5cxLbhMa5UBlCBCWew2cyNM8yCbfB7d/nGNT9+aFkEEWgIsbjBcbOEbeE1xth0W7L1GMyLnC+pyzF7Sk">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
