--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -165,7 +165,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 32%;">
-                <img src="assets/images/gadwood-mary-carla-stewart-582x727.jpg" alt="Mobirise" title="">
+                <img src="assets/images/kw-582x586.png" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,15 +182,15 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Mary Clementine Gadwood!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Kaylie Weller!
 <br>
-<br>Clementine is a Sophomore at Will Carleton Academy and plays on the volleyball and basketball teams. She is also a member of the student Council and the Hillsdale County Community Foundation YOUTH.
+<br>Kaylie is a senior at Litchfield High School and a member of the volleyball, basketball, and softball teams.
 <br>
-<br>According to the Will Carleton Academy staff, “Clementine is a diligent and cheerful student. She is outstanding in class discussions and turning in assignments well in advance, and she was a fantastic distance learning student this past spring.
+<br>According to Kaylie’s teacher Ms. Broesamle, “Kaylie has a fantastic mind and is amazing at leading meaningful discussion in the classroom.”
 <br>
-<br>Clementine plans to study pediatrics in college and become a pediatrician.
+<br>Kaylie plans to study criminal justice and physical therapy in college, and her dream goal is to play volleyball at the collegiate level as a walk-on.
 <br>
-<br>Congratulations, Clementine! Keep up your great work<br></p>
+<br>Congratulations, Kaylie! Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
@@ -219,7 +219,7 @@
                             <div class="col-md-12">
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
-<br>Abby Palmiter<br>Adrianna Aemisegger<br>Alecia Hodge<br>Alejandro Jeminez<br>Alexis Higgins<br>Allyson Rubley<br>Alyssa Forbes<br>Alyssa Phillips<br>Amirah Atterab<br>Angelee Coleman<br>Ariana Norman<br>Ariana Nubel<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Bills<br>Caleb Brink<br>Carson Laney<br>Carter Riley<br>Cecilia Mende<br>Ciara Small<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Gabriel Gadwood<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hannah Bensch<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Isabella Thielen<br>Jacob Hart<br>Jacob Scoville<br>James Baughman<br>James Fuller<br>Jay Close<br>Jena Fellabaum<br>Jeremy R.<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Madalynn Guideau<br>Magali Perez<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Mary Clementine Gadwood<br>Max Thielen<br>Maxim Hayes<br>Megan LoPresto<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Natalie E<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Raymon Brown<br>Rebecca Butters<br>Ryan Reiniche<br>Samara Voigt<br>Sara Cole<br>Sophie Crites<br>Taylor Vogelsong<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zach WIlson</p>
+<br>Abby Palmiter<br>Adrianna Aemisegger<br>Alecia Hodge<br>Alejandro Jeminez<br>Alexis Higgins<br>Allyson Rubley<br>Alyssa Forbes<br>Alyssa Phillips<br>Amirah Atterab<br>Angelee Coleman<br>Ariana Norman<br>Ariana Nubel<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Bills<br>Caleb Brink<br>Carson Laney<br>Carter Riley<br>Cecilia Mende<br>Ciara Small<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Gabriel Gadwood<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hannah Bensch<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Isabella Thielen<br>Jacob Hart<br>Jacob Scoville<br>James Baughman<br>James Fuller<br>Jay Close<br>Jena Fellabaum<br>Jeremy R.<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Kaylie Weller<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Madalynn Guideau<br>Magali Perez<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Mary Clementine Gadwood<br>Max Thielen<br>Maxim Hayes<br>Megan LoPresto<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Natalie E<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Raymon Brown<br>Rebecca Butters<br>Ryan Reiniche<br>Samara Voigt<br>Sara Cole<br>Sophie Crites<br>Taylor Vogelsong<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
