--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fKFRdKRaNCwp9M4+WR0gQTgIotiZRfESIO+mB/RNL+0dedvgWPh8VDT/iAbVU6/ZG1w/JpPzKOvgWDCTdLpyl2v+8w/RQyXpAuSTCRvaFMOluFW7MN/9rCd1ro6J4Ifw">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Pm4EOnIENoZOAlmF6Qcfmnxq8sZG10bh9VXsM51+7GTse7LjLVaDqgWO6IqPGZah2QIIXKYzuy7xHhFDma3o+mrjyzYtL0/PAxTXTzzEMnBojDykFSMKxmZxGAFwbRUo">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
