--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hphHsuH6q3OqgnNHT15J0isZUjPsXomMdV8AeP40ir29iMI66BjUmy8vg4yhJ/Ne4IkoxqebXULBYheWgYKvhME6r+5+sUP0kvtdEfuWzbdJLC8/osUvBgAv+Rx/XRxi">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VXfp5lQrApdJRJVOmCz+JSh3w57o3gb0F1Z147+YHldp1VYPSYGHRwfd3ES4wGQrM4lGZeMnpne48HsDjDAYi1qZXYOH3P1DV8RQYzVX3jfCnmCeW2RiZzGYhXsyADgz">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
