--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website</a></section><section class="mbr-section content5 cid-rjLHi5lPOL" id="content5-7w">
 
     
 
@@ -427,7 +427,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dzOJrFHikVAGOfcoNs8ksY+ODVIzVMA9Smuinwi5yfpN4x69LEI18R9GWbs2RKbR9mj2wCE6yynHTFhbp8CgRjW9DvFGA4F6dOzdnRyJTgajoAQsxyEi6mPQHb5IvpHd">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BIjBeYTx+X4Yu+eQsGtU9nYaUKlYsWxwKQOdpNAIrE8Imc74KHFmOVB2quHsokW+Vn5RB6QCtKmKarF4H3fEOmK4MysAvMHykTTiNC5lp/2CjAUrg9GxwXmSuREhjPE8">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
