create github pages

--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -164,8 +164,8 @@
         
 
         <div class="media-container-row mt-5 pt-3">
-            <div class="mbr-figure" style="width: 32%;">
-                <img src="assets/images/sotw-582x776.jpg" alt="Mobirise" title="">
+            <div class="mbr-figure" style="width: 42%;">
+                <img src="assets/images/andrew-rhoades-reading2-582x422.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,14 +182,15 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Allie M.!
-<br><br>Allie is in the 6th grade at Hillsdale Academy and she is active on the cross country team and basketball team, as well as in her church youth group.
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Andrew Rhoades!
 <br>
-<br>According to Allie’s teacher, Ms. Lori Andaloro, “Allie is a student always seeking the good, true and beautiful. She is a kind, virtuous young lady. Her depth of wonder for the material is outstanding and she often inquires into the deeper meaning of our lessons. She is an excellent example to those around her in all that she does."
+<br>Andrew is a senior at Reading High School where he is active on the football, wrestling, and track teams, and also participates in the National Honor Society.
 <br>
-<br>Allie plans to study and work in marine biology.
+<br>According to Reading High School teacher Brett Kerspilo, “Andrew is simply an excellent student. He is reliable, consistent, and conscientious. He is polite and kind to all of his classmates and staff members, and demonstrates a strong work ethic in all that he pursues.  Andrew is always willing to help others and the teacher to allow class to run smoothly, and he is a tremendous leader during the school day and during extra-curricular activities.”
 <br>
-<br>Congratulations, Allie! Keep up your great work.<br></p>
+<br>Andrew plans to become a registered nurse, and he is currently enrolled in Reading’s Early Middle College program through Jackson College.
+<br>
+<br>Congratulations, Andrew! Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
@@ -218,7 +219,7 @@
                             <div class="col-md-12">
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
-<br>Abby Palmiter<br>Adrianna Aemisegger<br>Alecia Hodge<br>Alejandro Jeminez<br>Alexis Higgins<br>Allie M.<br>Allyson Rubley<br>Alyssa Forbes<br>Alyssa Phillips<br>Amirah Atterab<br>Angelee Coleman<br>Ariana Norman<br>Ariana Nubel<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Bills<br>Caleb Brink<br>Carson Laney<br>Carter Riley<br>Cecilia Mende<br>Ciara Small<br>Connor Maddox<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Gabriel Gadwood<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hannah Bensch<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Isabella Thielen<br>Jacob Hart<br>Jacob Scoville<br>James Baughman<br>James Fuller<br>Jay Close<br>Jena Fellabaum<br>Jeremy R.<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Kaylie Weller<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Luke Miller<br>Mackenzie Webb<br>Maci Svacha<br>Madalynn Guideau<br>Magali Perez<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Mary Clementine Gadwood<br>Max Thielen<br>Maxim Hayes<br>Megan LoPresto<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Natalie E<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Raymon Brown<br>Rebecca Butters<br>Ryan Reiniche<br>Samara Voigt<br>Sara Cole<br>Sophie Crites<br>Taylor Vogelsong<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zach WIlson</p>
+<br>Abby Palmiter<br>Adrianna Aemisegger<br>Alecia Hodge<br>Alejandro Jeminez<br>Alexis Higgins<br>Allie M.<br>Allyson Rubley<br>Alyssa Forbes<br>Alyssa Phillips<br>Amirah Atterab<br>Angelee Coleman<br>Ariana Norman<br>Ariana Nubel<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Braliann Francis<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Bills<br>Caleb Brink<br>Carson Laney<br>Carter Riley<br>Cecilia Mende<br>Ciara Small<br>Connor Maddox<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Gabriel Gadwood<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hannah Bensch<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Isabella Thielen<br>Jacob Hart<br>Jacob Scoville<br>James Baughman<br>James Fuller<br>Jay Close<br>Jena Fellabaum<br>Jeremy R.<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaitlyn Knapp<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Kaylie Weller<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Luke Miller<br>Mackenzie Webb<br>Maci Svacha<br>Madalynn Guideau<br>Magali Perez<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Mary Clementine Gadwood<br>Max Thielen<br>Maxim Hayes<br>Megan LoPresto<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Natalie E<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Raymon Brown<br>Rebecca Butters<br>Ryan Reiniche<br>Samara Voigt<br>Sara Cole<br>Sophie Crites<br>Taylor Vogelsong<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Trenton Wortham<br>Zachary Affholter<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
